# CSC5382-Milestone_1-Business_Ml_Framing

./: .dockerignore  .gitignore  README.md
Milestone_1-Project_Inception/: README.md  requirements.txt
Milestone_2-PoC/: README.md  requirements.txt
Milestone_3-Data_Prep/: .gitignore  README.md  dvc.yaml  paths.py  requirements-m3.txt
Milestone_5-ML_Productionization/: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
Milestone_5-ML_Productionization/deployment/: Dockerfile.api  Dockerfile.client  README.md  docker-compose.yml
Milestone_5-ML_Productionization/deployment/huggingface_space/: Dockerfile  README.md  app.py  requirements.txt
Milestone_5-ML_Productionization/docs/: cicd_and_deployment.md  docker_setup_windows.md  service_contract.md
Milestone_5-ML_Productionization/frontend/: app.py
Milestone_5-ML_Productionization/reports/: batch_smoke_summary.json  live_finetuned_serving_smoke.json  m5_evidence_report.json  m5_evidence_report.txt  serving_pipeline_status.json  serving_pipeline_status.txt
Milestone_5-ML_Productionization/scripts/: deploy_huggingface_space.py  package_mlflow_runtime.py  run_api.py  run_batch_job.py  run_client.py  run_serving_pipeline.py  smoke_test.py  write_m5_evidence_report.py
Milestone_5-ML_Productionization/src/m5_productionization/: catalog.py  mlflow_runtime.py  paths.py  runtime.py  service.py  serving_pipeline.py
Milestone_5-ML_Productionization/src/m5_productionization/api/: main.py  schemas.py
Milestone_5-ML_Productionization/tests/: test_api.py  test_runtime.py  test_serving_pipeline.py
(+429 files in other folders)
